--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -5,7 +5,7 @@
  * Project Name: NYC Design
  * Version: 1.0
  * Date: 04-20-2014
- * URL: 
+ * URL:
  */
 
 /* ==========================================================================
@@ -110,7 +110,7 @@ h6 {
     padding-top: 230px;
     text-align: center;
     background-attachment: relative;
-    min-height: 650px;
+    min-height: 100vh;
     width: 100%;
 }
 
