--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -47,9 +47,9 @@ body {
     font-family: "Montserrat", sans-serif;
     font-weight: 400;
     font-size: 16px;
-
     -webkit-font-smoothing: antialiased;
     -webkit-overflow-scrolling: touch;
+    position: relative;
 }
 
 h1,
@@ -76,11 +76,16 @@ h6 {
 }
 
 .navbar-default .navbar-nav > .active > a,
-.navbar-default .navbar-nav > .active > a:hover,
 .navbar-default .navbar-nav > .active > a:focus {
+    font-weight: 700;
     color: #5cdb95;
     background-color: transparent;
-    border-bottom: 2px solid #5cdb95;
+    border-bottom: 4px solid #5cdb95;
+}
+
+.navbar-default .navbar-nav > .active > a:hover {
+    background-color: transparent;
+    color: #fff;
 }
 
 .navbar-default .navbar-nav > li > a {
@@ -95,6 +100,30 @@ h6 {
 .navbar-default .navbar-brand:hover,
 .navbar-default .navbar-brand:focus {
     color: #fff;
+}
+
+/* ==========================================================================
+   Navbar Toggle
+   ========================================================================== */
+
+.navbar-toggle,
+.navbar-default .navbar-toggle:hover,
+.navbar-default .navbar-toggle:focus {
+    background-color: #5cdb95;
+}
+
+.navbar-default .navbar-toggle .icon-bar {
+    background-color: #fff;
+}
+
+.navbar-collapse:focus {
+    background-color: #fff;
+}
+
+@media only screen and (max-width: 768px) {
+    .navbar-collapse.in {
+        background-color: rgba(0, 0, 0, 0.5);
+    }
 }
 
 /* ==========================================================================
@@ -128,6 +157,14 @@ h6 {
     color: #ffffff;
 }
 
+/* About */
+
+#about {
+    background-image: linear-gradient(#11998e, #38ef7d);
+    padding-bottom: 90px;
+    border-top: 20px solid rgba(211, 211, 211, 0.9);
+}
+
 #about h1 {
     text-align: center;
     margin: 60px;
@@ -137,6 +174,10 @@ h6 {
     width: 300px;
     display: block;
     margin: -20px auto 0 auto;
+}
+
+#about p {
+    margin-bottom: 30px;
 }
 
 #social {
@@ -155,14 +196,13 @@ h6 {
 }
 
 #footerwrap {
-    padding-top: 70px;
-    padding-bottom: 50px;
+    padding-top: 35px;
+    padding-bottom: 25px;
     background-color: #2f2f2f;
 }
 
 #footerwrap p {
     color: #f2f2f2;
-    margin-left: 10px;
 }
 
 #workwrap {
