--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -12,7 +12,7 @@
    Base Styles, Bootstrap Modifications & Fonts Import
    ========================================================================== */
 
-@import url(http://fonts.googleapis.com/css?family=Montserrat:400,700);
+@import url(https://fonts.googleapis.com/css?family=Montserrat:400,700);
 
 /*
  * A better looking default horizontal rule
